--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@auth0/angular-jwt": "5.0.2",
     "moment": "2.29.4",
     "moment-timezone": "0.5.38",
     "ngx-spinner": "^16.0.2",
