--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "5.0.2",
     "moment": "2.29.4",
     "moment-timezone": "0.5.38",
+    "ngx-mask": "^16.3.7",
     "ngx-spinner": "^16.0.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
