--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
+              "node_modules/ngx-spinner/animations/ball-fall.css",
               "src/styles.css"
             ],
             "scripts": []
