--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "15.1.0",
     "@angular/router": "15.1.0",
     "@auth0/angular-jwt": "5.1.2",
+    "cpf-cnpj-validator": "1.0.3",
     "moment": "2.29.4",
     "moment-timezone": "0.5.38",
     "ngx-mask": "15.1.0",
